# Schedule

server/client/: pyproject.toml
server/schedule/: Dockerfile  main.py  pyproject.toml
