[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["pavelxhukin <pavel_xhukin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.6"
motor = "^3.6.0"
envparse = "^0.2.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
